--- a/contributions.Rmd
+++ b/contributions.Rmd
@@ -681,10 +681,12 @@ subset_amounts_within_middle_90_percent <- subset(
     contb_receipt_amt < quantile(contb_receipt_amt, 0.95)
   )
 
+# I designated aes(shape = 'mean') in geom_point to show the means in each group of boxplots and show what the symbols mean using legend. To designate shape I used scale_shape_manual.
 ggplot(aes(x = if_nominee, y = contb_receipt_amt),
        data = subset_amounts_within_middle_90_percent) +
   geom_boxplot(alpha = 0.2) +
-  geom_point(stat = 'summary', fun.y = mean, size = 3, shape = 8) +
+  geom_point(stat = 'summary', fun.y = mean, size = 2, aes(shape = 'mean')) +
+  scale_shape_manual('', values=c('mean' = 8)) +
   scale_x_discrete()
 
 ggplot(aes(x = if_nominee, y = contb_receipt_amt, group = 1),
@@ -703,10 +705,12 @@ ggplot(aes(x = cand_party, y = contb_receipt_amt),
   geom_boxplot(alpha = 0.1) +
   scale_x_discrete()
 
+# I used again aes(shape = 'mean') and scale_shape_manual to show mean of each group.
 ggplot(aes(x = cand_party, y = contb_receipt_amt),
        data = subset_amounts_within_middle_90_percent) +
   geom_boxplot(alpha = 0.2) +
-  geom_point(stat = 'summary', fun.y = mean, size = 3, shape = 8) +
+  geom_point(stat = 'summary', fun.y = mean, size = 2, aes(shape = 'mean')) +
+  scale_shape_manual('', values = c('mean' = 8)) +
   scale_x_discrete()
 
 ggplot(aes(x = cand_party, y = contb_receipt_amt),
@@ -726,10 +730,12 @@ ggplot(aes(x = cand_nm, y = contb_receipt_amt),
   scale_x_discrete() +
   theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5))
 
+# I used again aes(shape = 'mean') and scale_shape_manual to show mean of each group.
 ggplot(aes(x = cand_nm, y = contb_receipt_amt),
        data = subset_amounts_within_middle_90_percent) +
   geom_boxplot(alpha = 0.2) +
-  geom_point(stat = 'summary', fun.y = mean, size = 1, shape = 8) +
+  geom_point(stat = 'summary', fun.y = mean, size = 2, aes(shape = 'mean')) +
+  scale_shape_manual('', values = c('mean' = 8)) +
   scale_x_discrete() +
   theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5))
 
@@ -750,10 +756,12 @@ ggplot(aes(x = election_tp, y = contb_receipt_amt),
   geom_boxplot(alpha = 0.2) +
   scale_x_discrete()
 
+# I used again aes(shape = 'mean') and scale_shape_manual to show mean of each group.
 ggplot(aes(x = election_tp, y = contb_receipt_amt),
        data = subset_amounts_within_middle_90_percent) +
   geom_boxplot(alpha = 0.2) +
-  geom_point(stat = 'summary', fun.y = mean, size = 1, shape = 8) +
+  geom_point(stat = 'summary', fun.y = mean, size = 2, aes(shape = 'mean')) +
+  scale_shape_manual('', values = c('mean' = 8)) +
   scale_x_discrete()
 
 ggplot(aes(x = election_tp, y = contb_receipt_amt),
@@ -789,12 +797,14 @@ ggplot(aes(x = contbr_city, y = contb_receipt_amt),
   scale_x_discrete() +
   theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5))
 
+# I used again aes(shape = 'mean') and scale_shape_manual to show mean of each group.
 ggplot(aes(x = contbr_city, y = contb_receipt_amt),
        data = subset(top10_sum_amounts_city,
                      contb_receipt_amt > quantile(contb_receipt_amt, 0.05) &
                        contb_receipt_amt < quantile(contb_receipt_amt, 0.95)))+
   geom_boxplot(alpha = 0.2) +
-  geom_point(stat = 'summary', fun.y = mean, size = 1, shape = 8) +
+  geom_point(stat = 'summary', fun.y = mean, size = 2, aes(shape = 'mean')) +
+  scale_shape_manual('', values = c('mean' = 8)) +
   scale_x_discrete() +
   theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5))
 
